disable osx for initial build

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ matrix:
     - os: linux
       compiler: gcc
       env: CFLAGS="-std=gnu99 -O0"
-    - os: osx
-      compiler: gcc
+#    - os: osx
+#      compiler: gcc
 
 env:
   global:
