--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,14 @@ matrix:
 env:
   global:
     - HTSDIR=./htslib
+    - SAMTOOLSDIR=./samtools
+    - PATH=$SAMTOOLSDIR:$PATH
+
+install:
+  - .travis/clone ${HTSREPO:-git://github.com/samtools/htslib.git} $HTSDIR $TRAVIS_BRANCH
+  - .travis/clone ${HTSREPO:-git://github.com/samtools/samtools.git} $SAMTOOLSDIR $TRAVIS_BRANCH
 
 before_script:
-  # Clone samtools/htslib (or another repository, as specified by a Travis CI
-  # repository $HTSREPO setting) and check out a corresponding branch with the
-  # same name, if any, or otherwise the default branch.
-  - .travis/clone ${HTSREPO:-git://github.com/samtools/htslib.git} $HTSDIR $TRAVIS_BRANCH
+  - (cd $SAMTOOLSDIR && autoconf && make)
 
 script: make -e && make -e test
