Cope with develop branch of htslib as well as the master branch

--- a/configure.ac
+++ b/configure.ac
@@ -7,15 +7,18 @@ LT_INIT
 
 AC_CONFIG_MACRO_DIR([m4])
 
-
-AC_SUBST(xCPPFLAGS)
-
 AX_WITH_HTSLIB
 
 AC_CONFIG_HEADERS([config.h])
+
+saved_CPPFLAGS="$CPPFLAGS"
+saved_LDFLAGS="$LDFLAGS"
+CPPFLAGS="$HTSLIB_CPPFLAGS"
+LDFLAGS="$HTSLIB_LDFLAGS"
 AC_CHECK_HEADERS([cram/sam_header.h])
-AC_CHECK_HEADERS([htslib/sam.h])
-AC_SEARCH_LIBS([bam_aux_update_str], [hts])
+AC_CHECK_LIB([hts], [bam_aux_update_str], [AC_DEFINE([HAVE_BAM_AUX_UPDATE_STR],[1],[Does htslib contain bam_aux_update_str()?])])
+CPPFLAGS="$saved_CPPFLAGS"
+LDFLAGS="$saved_LDFLAGS"
 
 AC_CONFIG_FILES([
  Makefile
