--- a/test/bclfile/Makefile.am
+++ b/test/bclfile/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = t_bclfile
+check_PROGRAMS = t_bclfile
 t_bclfile_SOURCES = t_bclfile.c
 t_bclfile_CFLAGS = -DDATA_DIR=$(abs_srcdir)
 t_bclfile_LDADD = -lz -ldl -lxml2 -lpthread
