Implement 'bambi chrsplit'

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,11 +1,15 @@
 AM_CPPFLAGS = $(HTSLIB_CPPFLAGS)
 AM_LDFLAGS = $(HTSLIB_LDFLAGS)
 
-check_PROGRAMS = t_bamit t_select t_bclfile t_decode t_filterfile t_posfile t_i2b
+check_PROGRAMS = t_bamit t_chrsplit t_select t_bclfile t_decode t_filterfile t_posfile t_i2b
 
 t_select_SOURCES = t_select.c $(top_srcdir)/src/select.c ../src/array.c ../src/bamit.c ../src/parse.c ../src/hts_addendum.c
 t_select_CFLAGS = -I$(top_srcdir)/src -DDATA_DIR=$(abs_srcdir)/data
 t_select_LDADD = $(HTSLIB_HOME)/lib/libhts.a -lz -ldl -lxml2 -lpthread -llzma -lbz2
+
+t_chrsplit_SOURCES = t_chrsplit.c $(top_srcdir)/src/chrsplit.c ../src/array.c ../src/bamit.c ../src/parse.c ../src/hts_addendum.c
+t_chrsplit_CFLAGS = -I$(top_srcdir)/src -DDATA_DIR=$(abs_srcdir)/data
+t_chrsplit_LDADD = $(HTSLIB_HOME)/lib/libhts.a -lz -ldl -lxml2 -lpthread -llzma -lbz2
 
 t_bamit_SOURCES = t_bamit.c $(top_srcdir)/src/bamit.c 
 t_bamit_CFLAGS = -I$(top_srcdir)/src -DDATA_DIR=$(abs_srcdir)/data
