Added unit test for array.c, and tidied tests generally

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,13 @@
 ACLOCAL_AMFLAGS= -I m4
-TESTS = test/t_bamit test/t_chrsplit test/t_select test/t_bclfile test/t_decode test/t_filterfile test/t_posfile test/t_i2b
+TESTS = test/t_array \
+        test/t_bamit \
+        test/t_chrsplit \
+        test/t_select \
+        test/t_bclfile \
+        test/t_decode \
+        test/t_filterfile \
+        test/t_posfile \
+        test/t_i2b
 SUBDIRS = src test
 dist_doc_DATA = README.md LICENSE
 AM_COLOR_TESTS=always
