--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,8 @@ TESTS = test/t_array \
         test/t_decode \
         test/t_filterfile \
         test/t_posfile \
-        test/t_i2b
+        test/t_i2b \
+        test/t_read2tags
 SUBDIRS = src test
 dist_doc_DATA = README.md LICENSE
 AM_COLOR_TESTS=always
