--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ env:
 install:
 - .travis/clone ${HTSREPO:-git://github.com/samtools/htslib.git} $HTSLIB master
 - .travis/clone ${HTSREPO:-git://github.com/samtools/samtools.git} $SAMTOOLSDIR master
+- sudo apt-get install -y gdb  # install gdb
 
 before_script:
 - (cd $HTSLIB && autoreconf && mkdir b && ./configure --prefix=$HTSDIR && make && make install)
@@ -39,6 +40,10 @@ after_success:
   - export DIST_FILE=$(ls bambi-*.tar.gz)
   - export SHA256_FILE=$DIST_FILE.sha256
   - shasum -a 256 $DIST_FILE > $SHA256_FILE
+
+after_failure:
+- COREFILE=$(find . -maxdepth 1 -name "core*" | head -n 1) # find core file
+- if [[ -f "$COREFILE" ]]; then gdb -c "$COREFILE" test/t_i2b -ex "thread apply all bt" -ex "set pagination 0" -batch; fi
 
 deploy:
   provider: releases
