--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,9 @@ src_bambi_SOURCES = src/bambi.c \
                     src/parse.c \
                     src/parse.h \
                     src/bamit.c \
-                    src/bamit.h
+                    src/bamit.h \
+                    src/hash_table.h \
+                    src/hash_table.c
 
 nobase_include_HEADERS = src/cram/cram_samtools.h src/cram/pooled_alloc.h src/cram/sam_header.h src/cram/string_alloc.h
 src_bambi_CFLAGS = -I/usr/include/libxml2 -I$(top_srcdir)/src
@@ -81,7 +83,7 @@ test_t_bclfile_SOURCES = test/t_bclfile.c src/array.c
 test_t_bclfile_CFLAGS = $(TEST_CFLAGS)
 test_t_bclfile_LDADD = $(TEST_LDADD)
 
-test_t_decode_SOURCES = test/t_decode.c src/array.c src/bamit.c
+test_t_decode_SOURCES = test/t_decode.c src/array.c src/bamit.c src/hash_table.c
 test_t_decode_CFLAGS = $(TEST_CFLAGS)
 test_t_decode_LDADD = $(TEST_LDADD)
 
