Enable barcode decoding in i2b
Add an interface to decode so that i2b can call into it.  To avoid
a clash with i2b, its opts_t struct is renamed to decode_opts_t.

Add decoding options to i2b.  Options (long only) are copied from
decode.  Decoding is enabled by using the --barcode-file option.

Make addHeader() write a read group header for each barcode
if decoding is enabled instead of a single one for the whole file.

Update processRecordGroup() to make it look up the barcodes and
alter the read group and optionally the read name to say which
tag was found.  The actual decoding is done by decode_tags().
Currently the call data is not shared with bam_write_barcode_tag()
so the barcode bcl files get converted twice.  While not quite
as efficient, it's simpler to keep both separate.

processTile() now recycles processRecordJob_struct structures
using a free-list so that it can reuse barcode metrics structures.

Barcode metrics are accumulated in the same way as for decode and
printed out at the end if the --metrics-file option is used.

In a small test, decoding in i2b saves about 30% CPU compared
to i2b piped into decode.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,7 @@ src_bambi_SOURCES = src/bambi.c \
                     src/bambi_utils.c \
                     src/bambi_utils.h \
                     src/decode.c \
+                    src/decode.h \
                     src/i2b.c \
                     src/select.c \
                     src/chrsplit.c \
@@ -103,7 +104,7 @@ test_t_filterfile_CFLAGS = $(TEST_CFLAGS)
 test_t_posfile_SOURCES = test/t_posfile.c
 test_t_posfile_CFLAGS = $(TEST_CFLAGS)
 
-test_t_i2b_SOURCES = test/t_i2b.c src/i2b.c src/posfile.c src/bclfile.c src/filterfile.c src/array.c src/parse.c src/hts_addendum.c
+test_t_i2b_SOURCES = test/t_i2b.c src/i2b.c src/posfile.c src/bclfile.c src/filterfile.c src/array.c src/parse.c src/hts_addendum.c src/decode.c src/bamit.c src/hash_table.c
 test_t_i2b_CFLAGS = $(TEST_CFLAGS)
 test_t_i2b_LDADD = $(TEST_LDADD)
 
