Fix warnings found by gcc 8.1.0
Makes bambi compile cleanly with gcc-8.1.0 -Wall -Werror -g -O3

Move functions display(), die(), smalloc(), srealloc() from
bambi.c to new file bambi_utils.c.  Allows them to be used by
test programs without also pulling in bambi's own main() function.

Remove lots of unused variables and a couple of unused functions.
Turn on previously unused t_chrsplit testyhuman() test.

Deal with various pointer signedness issues, mainly uint8_t/char.

Make rts.c readHeader() check that fgets() actually worked.

Grow some fixed size buffers that might not be big enough.

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,8 @@ AM_LDFLAGS = -rdynamic $(HTSLIB_LDFLAGS)
 bin_PROGRAMS = src/bambi
 src_bambi_SOURCES = src/bambi.c \
                     src/bambi.h \
+                    src/bambi_utils.c \
+                    src/bambi_utils.h \
                     src/decode.c \
                     src/i2b.c \
                     src/select.c \
@@ -67,7 +69,7 @@ check_PROGRAMS = test/t_read2tags \
 TEST_CFLAGS = -I$(top_srcdir)/src $(XML_CFLAGS) -DDATA_DIR=$(top_srcdir)/test/data
 TEST_LDADD = $(HTSLIB_LIBS) -lm
 
-test_t_read2tags_SOURCES = test/t_read2tags.c src/read2tags.c src/array.c src/bamit.c src/parse.c src/hts_addendum.c
+test_t_read2tags_SOURCES = test/t_read2tags.c src/read2tags.c src/array.c src/bamit.c src/parse.c src/hts_addendum.c src/bambi_utils.c
 test_t_read2tags_CFLAGS = $(TEST_CFLAGS)
 test_t_read2tags_LDADD = $(TEST_LDADD)
 
