--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,18 @@ env:
   - P=`pwd`
   - HTSLIB=$P/htslib
   - HTSDIR=$HTSLIB/b
+  - HTSLIB_BRANCH=develop
   - DISTCHECK_CONFIGURE_FLAGS=--with-htslib=$HTSDIR
 
 install:
-- .travis/clone ${HTSREPO:-git://github.com/samtools/htslib.git} $HTSLIB $HTSLIB_BRANCH
+- git clone --branch $HTSLIB_BRANCH git://github.com/samtools/htslib.git $HTSLIB
 
 before_script:
 - (cd $HTSLIB && autoreconf && mkdir b && ./configure --prefix=$HTSDIR && make && make install)
 
-script: autoreconf -i && ./configure -V && ./configure --with-htslib=$HTSDIR && make && make check && make distcheck
+script:
+  - autoreconf -i && ./configure -V && ./configure --with-htslib=$HTSDIR
+  - make && make check && make distcheck
 
 after_success:
   - make dist
