changes after review
fix extra space in action name
split lines with multiple commands
update labels for image
  use org.opencontainers.image naming convention
rename action linting & test building Dockerfile

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -47,10 +47,13 @@ jobs:
             --platform linux/amd64 \
             --progress plain \
             --load \
-            --label "uk.ac.sanger.repository=$GIT_URL" \
-            --label "uk.ac.sanger.commit=$GIT_COMMIT" \
-            --tag "ghcr.io/$REPOSITORY_OWNER/$IMAGE_NAME:$RELEASE_VERSION" \
-            --tag "ghcr.io/$REPOSITORY_OWNER/$IMAGE_NAME:latest" \
+            --label "org.opencontainers.image.title=bambi" \
+            --label "org.opencontainers.image.source=${GIT_URL}" \
+            --label "org.opencontainers.image.revision=${GIT_COMMIT}" \
+            --label "org.opencontainers.image.version=${RELEASE_VERSION}" \
+            --label "org.opencontainers.image.created=$(date --utc --iso-8601=seconds)" \
+            --tag "ghcr.io/$REPOSITORY_OWNER/${IMAGE_NAME}:${RELEASE_VERSION}" \
+            --tag "ghcr.io/$REPOSITORY_OWNER/${IMAGE_NAME}:latest" \
             .
 
       - name: "Push image to registry"
