--- a/.github/workflows/lint-and-test-build-dockerfile.yml
+++ b/.github/workflows/lint-and-test-build-dockerfile.yml
@@ -1,4 +1,4 @@
-name: "Docker"
+name: "lint and test-build Dockerfile"
 
 on:
   push:
@@ -38,7 +38,7 @@ jobs:
 
     steps:
       - name: "Checkout code"
-        uses: actions /checkout@v3
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
